# YOLOv8-TensorRT-CPP-TX1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cli_app.cpp  cmd_line_util.h  object_detection_video_stream.cpp
